Fixed captcha render position on mobile

--- a/src/styles/css/components/captcha/captcha-container.scss
+++ b/src/styles/css/components/captcha/captcha-container.scss
@@ -1,3 +1,13 @@
+$breakpoints: (
+	'xs-phone': 320px,
+	'phone': 480px,
+	'tablet': 768px,
+	'desktop': 1024px,
+	'widescreen': 1200px
+);
+
+@import '../../vendors/include-media';
+
 .captcha-container {
   position: fixed;
   top: 50%;
@@ -6,4 +16,8 @@
   -webkit-transform: translateY(-50%) translateX(-50%);
   -ms-transform: translateY(-50%) translateX(-50%);
   transform: translateY(-50%) translateX(-50%);
+  @include media("<tablet") {
+    width: 100%;
+    top: 30%;
+  }
 }
